<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/llMain"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edtWeight"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_wt"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="10dp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edtHeightFt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_htF"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="10dp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edtHeightIn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_htI"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="10dp"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/calcBMI" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/result"
        android:textSize="21sp"
        android:textStyle="bold"/>

</LinearLayout>